# solfoundry

./: .coderabbit.yaml  .env.example  .gitignore  CONTRIBUTING.md  docker-compose.yml  index.html
.github/workflows/: anchor.yml  bounty-tracker.yml  ci-cd.yml  ci.yml  claim-guard.yml  deploy.yml  escrow-cleanup.yml  pr-review.yml  spam-guard.yml  spam-sweep.yml  wallet-check.yml
backend/: .env.example  Dockerfile  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/app/: celery_app.py  database.py  exceptions.py  main.py  seed_leaderboard.py
backend/docs/: claims.md  webhooks_catalog.md
backend/scripts/: seed_contributors_from_github.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_boost.py  test_bounties.py  test_bounty_dashboard.py  test_bounty_search.py  test_claims.py  test_contributors.py  test_dispute_resolution.py  test_dispute_system.py  test_email_service.py  test_escrow.py  test_leaderboard.py  test_reputation.py  test_staking.py  test_staking_service.py  test_submission_flow.py  test_treasury_dashboard.py
contracts/: TESTING.md
contracts/bounty-registry/: Anchor.toml  Cargo.toml  package.json  tsconfig.json
contracts/programs/escrow/: Cargo.toml
contracts/staking-program/: Cargo.toml  package.json
docs/: E2E_TESTING.md  ci-e2e-workflow.yml
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
scripts/: audit_deps.py  pg_backup.py  test-contributing.sh  test-og-meta.sh
sdk/: CHANGELOG.md  README.md  tsconfig.json  vitest.config.ts
(+330 files in other folders)
